Remove dependency on clavatar, re-implement sans java.xml.bind
Even with the --module flag, java 11 doesn't include the module by
default & we don't really need it anyway